--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -758,8 +758,8 @@ We will assume, based on our experimental setup, that the speaker has one of two
 At the top level of inference, the pragmatic listener $L_{1}$ interprets the speaker's utterance $u$ to jointly infer the state $s$ and
 the free interpretation variables: the ambiguous utterance's intended interpretation $v$, and the thresholds $\theta_d$, $\theta_c$. %This probability is proportional to the probability that $S_{1}$ would choose to utter $u$ with interpretation $v$ to communicate about the state \emph{s} inferred on the basis of perceptual access $a$ to a literal listener, while incorporating prior uncertainty about $s$ and $v$.
 By Bayes' rule:
-$$P_{L_{1}}(s,v,\theta_d,\theta_c|u,a) \propto P_{S_{1}}(u|o(a,s),v,\theta_d,\theta_c) \cdot P(s) \cdot P(v)$$
-Here $o(a,s)$ is a deterministic function that reads off the observation the speaker would have had given an access mode and a hypothesized true state. We have assumed uninformative, uniform priors on the threshold variables.
+$$P_{L_{1}}(s,v,\theta_d,\theta_c|u,a) \propto P_{S_{1}}(u|o(a,s),v,\theta_d,\theta_c) \cdot P(s) \cdot P(v) \cdot P(\theta_d,\theta_c)$$
+Here $o(a,s)$ is a deterministic function that reads off the observation the speaker would have had given an access mode and a hypothesized true state.
 
 Put simply, the plural predication is both ambiguous ($v$) and vague ($\theta_{c}$, $\theta_d$); the listener reasons about likely interpretations given an intuitive understanding of speakers and prior knowledge of the world (i.e., which states and interpretations are \emph{a priori} likely). This inference is guided by reasoning about how informative each utterance would have been, with different interpretations. Informativity is in turn influenced by semantic factors including the variability of context, $c$, that may differentially affect the different interpretations.
 
@@ -868,15 +868,23 @@ Put simply, the plural predication is both ambiguous ($v$) and vague ($\theta_{c
 %
 % To summarize: the pragmatic listener resolves ambiguity while interpreting an utterance by reasoning about the pragmatic speaker, who chooses utterances most likely to communicate some state via a specific interpretation to a naive, literal listener. The speaker and pragmatic listener track the speaker's access to knowledge, which determines whether the speaker has limited access to the state about which he communicates. In other words, listeners reason about likely interpretations of ambiguous plural predications given their intuitive understanding of speakers and their prior knowledge of the world (i.e., which states and interpretations are \emph{a priori} likely).
 
-\subsection{Qualitative predictions}
+\subsection{Model results}
 
-\ndg{this section can be simplified somewhat, since i included some additional details (eg access, degrees) in the above. why separate quantitative and qualitative results? we could simply use the fit values and generate all the same plots?}
+To generate predictions we need to fix various parameter settings within the model; we aim to make the simplest choices possible, focussing on qualitative predictions. \footnote{The full model is viewable online at \url{http://forestdb.org/models/plural-predication.html}.}
+%Here we fill in more details of these settings, with the caveat that the qualitative model results presented below are robust to a broad range of parameter settings; the specific values we give here are used merely to demonstrate the general behavior and success of the model.\footnote{XXX specifics about the range of parameter settings that are possible, and the settings that are not.\label{parameter}}
+Each state, $s$, consists of four objects, each of which has degree $3$ or $4$. 
+The two threshold variables correspondingly range over values $2,3$. \ndg{check}
+The priors on state $P(s)$ and on thresholds $P(\theta_d,\theta_c)$ are taken to be uniform.
+We take $P(v)$ to be Bernoulli with a single free parameter (the prior bias toward distributive interpretations); this parameter was fit to $0.88$ based on our experimental data.
+We take the cost $C(u)$ to be $1$ for the ambiguous utterance and $2$ for both the unambiguous utterances---a reasonable assumption from the point of view of production, given that unambiguous utterances contain an extra word (i.e., \emph{each} or \emph{together}).
+Importantly the qualitative patterns reported below are robust to changes in these parameters and assumptions.
 
+\ndg{what about alpha?}
 
-To generate qualitative predictions that we may compare with our experimental results, we need to fix various parameter settings within the model. %Here we fill in more details of these settings, with the caveat that the qualitative model results presented below are robust to a broad range of parameter settings; the specific values we give here are used merely to demonstrate the general behavior and success of the model.\footnote{XXX specifics about the range of parameter settings that are possible, and the settings that are not.\label{parameter}}
-States $s$ correspond to ordered sets of four objects, which hold scalar properties. States are formed by drawing four times from a uniform prior distribution over objects (i.e., boxes of size 3 or 4). States are thus sets of positive integers; the state $\{3, 3, 4, 4\}$ corresponds to a plurality of four boxes, two of size 3 and two of size 4. 
- 
-Next, the utterances. Speakers choose between an {unambiguously distributive} (e.g., \emph{the boxes each are big}), an {unambiguously collective} (e.g., \emph{the boxes together are big}), and an {ambiguous} utterance (e.g., \emph{the boxes are big}). The interpretation of the ambiguous utterance depends on the value of the interpretation-resolving variable $v$, which the pragmatic listener infers. When $v$ is \textsc{collective}, the utterance receives a \texttt{collective-interpretation}, \ref{coll}; otherwise, the utterance receives a \texttt{distributive-interpretation}, \ref{dist}.\footnote{Following \cite{lassitergoodman2013}, we treat the threshold parameters as lifted variables that get resolved by the pragmatic listener as he interprets the speaker's utterance. So, strictly speaking, $v$ represents not just the interpretation-resolving variable, but also the threshold variables for the gradable predicates.} %These interpretations carry the semantics in \Next.
+%States $s$ correspond to ordered sets of four objects, which hold scalar properties. States are formed by drawing four times from a uniform prior distribution over objects (i.e., boxes of size 3 or 4). States are thus sets of positive integers; 
+%the state $\{3, 3, 4, 4\}$ corresponds to a plurality of four boxes, two of size 3 and two of size 4. 
+
+%Next, the utterances. Speakers choose between an {unambiguously distributive} (e.g., \emph{the boxes each are big}), an {unambiguously collective} (e.g., \emph{the boxes together are big}), and an {ambiguous} utterance (e.g., \emph{the boxes are big}). The interpretation of the ambiguous utterance depends on the value of the interpretation-resolving variable $v$, which the pragmatic listener infers. When $v$ is \textsc{collective}, the utterance receives a \texttt{collective-interpretation}, \ref{coll}; otherwise, the utterance receives a \texttt{distributive-interpretation}, \ref{dist}.\footnote{Following \cite{lassitergoodman2013}, we treat the threshold parameters as lifted variables that get resolved by the pragmatic listener as he interprets the speaker's utterance. So, strictly speaking, $v$ represents not just the interpretation-resolving variable, but also the threshold variables for the gradable predicates.} %These interpretations carry the semantics in \Next.
 % 
 % \ex. \emph{Interpretation semantics}:
 % \a. \sem{\texttt{distributive-interpretation}} =
@@ -886,9 +894,15 @@ Next, the utterances. Speakers choose between an {unambiguously distributive} (e
 %In our box setting, this semantics captures the fact that the distributive interpretation of a gradable predicate is true of a plurality when each of its members exceeds a contextually-determined cutoff \citep{kennedy1999,lassitergoodman2013}. The \texttt{collective-interpretation} is true of a state $s$ just in case the sum of that state---the plurality taken together---exceeds some collective threshold. Here we capture the sum-based aggregation inherent to collective interpretations of gradable predicates \citep{scha1984}. 
 %So far, no deviation from the formal semantics tradition.
 
-What sets this semantics apart is the contextual noise parameter $c$ in the \texttt{collective}-\texttt{interpretation}, a scalar multiplier of the set aggregate estimate that determines contextual predictability. 
-%This parameter explicitly represents possible noise in the determination of, say, collective size. In other words, this parameter models the contextual predictability of a collective property, or the possibility that speakers and listeners will arrive at different truth values for a collective interpretation. For our purposes, lower noise (i.e., values closer to 1) corresponds to increased contextual predictability of the collective property. 
-To evaluate the qualitative predictions of our model, we begin with the possible values for $c$ shown in Fig.~\ref{noises}, where, for example, with \texttt{low} noise $c$ equals 1 (i.e., no change to the state estimate) 100\% of the time; and with \texttt{high} noise, $c$ equals 0.5, 1, or 1.5 with equal probability (i.e., the state estimate is accurate a third of the time, or off by half two-thirds of the time).
+Our central claim surrounds the effect of $P(c)$, which controls the predictability of the collective interpretation. To evaluate its role we generated model predictions for distributions of varying entropy.
+%
+%What sets this semantics apart is the contextual noise parameter $c$ in the \texttt{collective}-\texttt{interpretation}, a scalar multiplier of the set aggregate estimate that determines contextual predictability. 
+%%This parameter explicitly represents possible noise in the determination of, say, collective size. In other words, this parameter models the contextual predictability of a collective property, or the possibility that speakers and listeners will arrive at different truth values for a collective interpretation. For our purposes, lower noise (i.e., values closer to 1) corresponds to increased contextual predictability of the collective property. 
+%To evaluate the qualitative predictions of our model, we begin with the possible values for $c$ shown in 
+%
+Fig.~\ref{noises} shows four different distributions evaluated. For example, with \texttt{low} noise the multiplier $c$ equals 1 (i.e., no change to the state estimate) 100\% of the time; and with \texttt{high} noise, $c$ equals 0.5, 1, or 1.5 with equal probability (i.e., the state estimate is accurate a third of the time, or off by half two-thirds of the time).
+%Given our interest in the effects of contextual predictability and speaker knowledge on the disambiguation of plural predications, i
+In Fig.~\ref{modelresults} we plot the probability that the interpretation-resolving variable $v$ is \texttt{collective} after hearing the \texttt{ambiguous} utterance, marginalizing the other variables from the pragmatic listener $L_1$. In other words, we plot the probability of a collective interpretation.% as a function of noise in the collective interpretation and speaker access to knowledge.
 
 \begin{figure}[h]
 	\centering
@@ -897,29 +911,29 @@ To evaluate the qualitative predictions of our model, we begin with the possible
 	\caption{Contextual noise priors used to evaluate the qualitative predictions of the plural predication model.} \label{noises}
 \end{figure}
 
-%With \texttt{no} noise, our estimates are spot on and collective properties are maximally predictable from context. Increasing noise, contextual predictability decreases: our estimates of collective properties deviate from the true state. Noise is a property of the world context, and as such speakers and listeners both have access to its value. In other words, we assume that speakers and listeners are aware of the inherent contextual predictability of collective properties.
-
-When the speaker access to knowledge variable $a$ is set to \texttt{full}, the speaker's belief distribution over possible states is exact, a delta distribution over \emph{the} state (Fig.~\ref{speakerbelief}, left); having observed $\{3,3,4,4\}$, the speaker knows the state is $\{3,3,4,4\}$ (and not, say, $\{4,4,3,3\}$). %Where $a$ is set to \texttt{partial} knowledge, the . 
-With \texttt{partial} knowledge, the speaker only observes the sum of the individual state values, say 14, so the speaker's belief distribution is broader (Fig.~\ref{speakerbelief}, right).%But more than one state could generate this value, namely any combination of two size 3 boxes with two size 4 boxes.
-\footnote{In its simplest form, our model includes only objects of two different sizes (3 and 4), so that speaker uncertainty over states concerns the order of the state-internal objects. 
-%Including more possible objects (i.e., more possible object sizes) introduces additional uncertainty over the identity of state-internal objects. 
-We present the simpler model here for illustrative purposes only. All of the model predictions we report are robust to a broad range of parameter settings, including a prior over individual objects that includes more than two possible values. In fact, including more types possible objects serves merely to increase potential speaker uncertainty and thus enhance the effect of speaker knowledge. The full model is viewable online at \url{http://forestdb.org/models/plural-predication.html}.}
-
-\begin{figure}[h]
-	\includegraphics[width=\linewidth]{plots/state_plots.eps}
-	\vspace{-20pt}
-	\caption{Speaker belief distributions resulting from \texttt{full} (left) and \texttt{partial} (right) perceptual access to the state $\{3,3,4,4\}$.} \label{speakerbelief}
-\end{figure}
-%\subsection{Model predictions}
-
-Given our interest in the effects of contextual predictability and speaker knowledge on the disambiguation of plural predications, in Fig.~\ref{modelresults} we plot the probability that the interpretation-resolving variable $v$ is \texttt{collective} after hearing the \texttt{ambiguous} utterance. In other words, we plot the probability of a collective interpretation.% as a function of noise in the collective interpretation and speaker access to knowledge.
-
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\linewidth]{plots/model-results.eps}
 	\vspace{-20pt}
 	\caption{Model predictions for the probability of the \texttt{ambiguous} utterance receiving a collective interpretation as a function of collective interpretation noise and speaker knowledge access.} \label{modelresults}
 \end{figure}
+
+%With \texttt{no} noise, our estimates are spot on and collective properties are maximally predictable from context. Increasing noise, contextual predictability decreases: our estimates of collective properties deviate from the true state. Noise is a property of the world context, and as such speakers and listeners both have access to its value. In other words, we assume that speakers and listeners are aware of the inherent contextual predictability of collective properties.
+
+%When the speaker access to knowledge variable $a$ is set to \texttt{full}, the speaker's belief distribution over possible states is exact, a delta distribution over \emph{the} state (Fig.~\ref{speakerbelief}, left); having observed $\{3,3,4,4\}$, the speaker knows the state is $\{3,3,4,4\}$ (and not, say, $\{4,4,3,3\}$). %Where $a$ is set to \texttt{partial} knowledge, the . 
+%With \texttt{partial} knowledge, the speaker only observes the sum of the individual state values, say 14, so the speaker's belief distribution is broader (Fig.~\ref{speakerbelief}, right).%But more than one state could generate this value, namely any combination of two size 3 boxes with two size 4 boxes.
+%\footnote{In its simplest form, our model includes only objects of two different sizes (3 and 4), so that speaker uncertainty over states concerns the order of the state-internal objects. 
+%%Including more possible objects (i.e., more possible object sizes) introduces additional uncertainty over the identity of state-internal objects. 
+%We present the simpler model here for illustrative purposes only. All of the model predictions we report are robust to a broad range of parameter settings, including a prior over individual objects that includes more than two possible values. In fact, including more types possible objects serves merely to increase potential speaker uncertainty and thus enhance the effect of speaker knowledge. .}
+
+%\begin{figure}[h]
+%	\includegraphics[width=\linewidth]{plots/state_plots.eps}
+%	\vspace{-20pt}
+%	\caption{Speaker belief distributions resulting from \texttt{full} (left) and \texttt{partial} (right) perceptual access to the state $\{3,3,4,4\}$.} \label{speakerbelief}
+%\end{figure}
+%%\subsection{Model predictions}
+
+
 
 The qualitative predictions of our plural predication model match the hypotheses and experimental results that motivated the model. Most striking is the monotonic increase in probability of collective interpretations as collective noise decreases. %As contextual noise decreases, collective properties become more predictable, and collective interpretations become more likely. 
 We now have a formal understanding as to why this effect holds: the noisier the collective interpretation, the less likely the listener $L_{0}$ is to correctly resolve the question under discussion, namely the properties of the named boxes $s$. Given that the speaker $S_{1}$'s goal is to successfully communicate $s$ to $L_{0}$, the noisier an interpretation, the less useful it is at achieving this goal; the speaker is therefore less likely to intend this interpretation, and as a result the pragmatic listener $L_{1}$ is less likely to infer it.
@@ -929,7 +943,7 @@ $L_{1}$ tracks  $S_{1}$'s epistemic state, and therefore knows whether the speak
 
 %We have verified the qualitative predictions of our account of plural predication: increasing the contextual predictability of collective properties (by decreasing contextual noise) increases the probability of collective interpretations; and, regardless of the amount of contextual noise, removing support for a distributive interpretation (by limiting the speaker's access to individual properties) decreases the probability of a distributive interpretation and thus increases the probability of a collective interpretation. Crucially, both of these qualitative predictions are borne out while making minimal assumptions concerning model parameters. Next, we fit these parameters to the human data collected in Expt.~3 to test both qualitative and \emph{quantitative} predictions of the model.
 
-\subsection{Quantitative predictions}
+\ndg{what is the list of all parameters fit? $P(v)$, $C(u)$... anything else? do these results still use only two values of the degrees (3 and 4)? which $P(c)$ is used for these predictions? is it fit to the data?}
 
 To test the quantitative predictions of our model, we fit its parameters to best estimate the human data. Comparing the model predictions in Fig.~\ref{modelresults} to the rates of collective endorsement from Expt.~3 in Fig.~\ref{resultsexpt2}, the first thing to notice is the overall higher rates of collective endorsement in the human data. To capture this fact, we can change the prior probability of a collective interpretation, $p(v)$, in our model. In Fig.~\ref{modelresults}, that parameter is set to 0.5, or chance; to achieve a maximal fit between our model and the dependent measure from Expt.~3, we set that parameter to 0.88 for each of the three predicates. We also cheapen the cost of the ambiguous utterance relative to the unambiguous ones; in place of the flat prior distribution over possible utterances used above, here we set the utterance prior such that \texttt{ambiguous} is twice as cheap as \texttt{collective} or \texttt{distributive}---a reasonable assumption from the point of view of production, given that costlier, unambiguous utterances contain an extra word (i.e., \emph{each} or \emph{together}).
 
