moving stuff in model results

--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -870,11 +870,14 @@ Put simply, the plural predication is both ambiguous ($v$) and vague ($\theta_{c
 
 \subsection{Model results}
 
+\ndg{what is the list of all parameters fit? $P(v)$, $C(u)$... anything else? do these results still use only two values of the degrees (3 and 4)? which $P(c)$ is used for these predictions? is it fit to the data?}
+
+
 To generate predictions we need to fix various parameter settings within the model; we aim to make the simplest choices possible, focussing on qualitative predictions. \footnote{The full model is viewable online at \url{http://forestdb.org/models/plural-predication.html}.}
 %Here we fill in more details of these settings, with the caveat that the qualitative model results presented below are robust to a broad range of parameter settings; the specific values we give here are used merely to demonstrate the general behavior and success of the model.\footnote{XXX specifics about the range of parameter settings that are possible, and the settings that are not.\label{parameter}}
 Each state, $s$, consists of four objects, each of which has degree $3$ or $4$. 
-The two threshold variables correspondingly range over values $2,3$. \ndg{check}
-The priors on state $P(s)$ and on thresholds $P(\theta_d,\theta_c)$ are taken to be uniform.
+The $\theta_d$ threshold variable ranged over values $2,3$, the $\theta_c$ over $12,13,14,15,16$.
+The priors on state $P(s)$ and on thresholds $P(\theta_d,\theta_c)$ are taken to be uniform. \ndg{check}
 We take $P(v)$ to be Bernoulli with a single free parameter (the prior bias toward distributive interpretations); this parameter was fit to $0.88$ based on our experimental data.
 We take the cost $C(u)$ to be $1$ for the ambiguous utterance and $2$ for both the unambiguous utterances---a reasonable assumption from the point of view of production, given that unambiguous utterances contain an extra word (i.e., \emph{each} or \emph{together}).
 Importantly the qualitative patterns reported below are robust to changes in these parameters and assumptions.
@@ -902,7 +905,7 @@ Our central claim surrounds the effect of $P(c)$, which controls the predictabil
 %
 Fig.~\ref{noises} shows four different distributions evaluated. For example, with \texttt{low} noise the multiplier $c$ equals 1 (i.e., no change to the state estimate) 100\% of the time; and with \texttt{high} noise, $c$ equals 0.5, 1, or 1.5 with equal probability (i.e., the state estimate is accurate a third of the time, or off by half two-thirds of the time).
 %Given our interest in the effects of contextual predictability and speaker knowledge on the disambiguation of plural predications, i
-In Fig.~\ref{modelresults} we plot the probability that the interpretation-resolving variable $v$ is \texttt{collective} after hearing the \texttt{ambiguous} utterance, marginalizing the other variables from the pragmatic listener $L_1$. In other words, we plot the probability of a collective interpretation.% as a function of noise in the collective interpretation and speaker access to knowledge.
+In Fig.~\ref{modelresults} we plot the probability that the interpretation-resolving variable $v$ is \texttt{collective} after hearing the \texttt{ambiguous} utterance, marginalizing the other variables from the pragmatic listener $L_1$. In other words, we plot the probability of a collective interpretation depending on collective noise and speaker access.% as a function of noise in the collective interpretation and speaker access to knowledge.
 
 \begin{figure}[h]
 	\centering
@@ -915,7 +918,7 @@ In Fig.~\ref{modelresults} we plot the probability that the interpretation-resol
 	\centering
 	\includegraphics[width=\linewidth]{plots/model-results.eps}
 	\vspace{-20pt}
-	\caption{Model predictions for the probability of the \texttt{ambiguous} utterance receiving a collective interpretation as a function of collective interpretation noise and speaker knowledge access.} \label{modelresults}
+	\caption{Model predictions for the probability of the \texttt{ambiguous} utterance receiving a collective interpretation as a function of collective interpretation noise and speaker knowledge access.  \ndg{todo: regenerate this figure using parameters fit to data. also change access label to "sum" from "partial".}  } \label{modelresults} 
 \end{figure}
 
 %With \texttt{no} noise, our estimates are spot on and collective properties are maximally predictable from context. Increasing noise, contextual predictability decreases: our estimates of collective properties deviate from the true state. Noise is a property of the world context, and as such speakers and listeners both have access to its value. In other words, we assume that speakers and listeners are aware of the inherent contextual predictability of collective properties.
@@ -935,17 +938,17 @@ In Fig.~\ref{modelresults} we plot the probability that the interpretation-resol
 
 
 
-The qualitative predictions of our plural predication model match the hypotheses and experimental results that motivated the model. Most striking is the monotonic increase in probability of collective interpretations as collective noise decreases. %As contextual noise decreases, collective properties become more predictable, and collective interpretations become more likely. 
-We now have a formal understanding as to why this effect holds: the noisier the collective interpretation, the less likely the listener $L_{0}$ is to correctly resolve the question under discussion, namely the properties of the named boxes $s$. Given that the speaker $S_{1}$'s goal is to successfully communicate $s$ to $L_{0}$, the noisier an interpretation, the less useful it is at achieving this goal; the speaker is therefore less likely to intend this interpretation, and as a result the pragmatic listener $L_{1}$ is less likely to infer it.
+The qualitative predictions of our plural predication model match the hypotheses and experimental results that motivated the model. Most striking is the monotonic increase in probability of collective interpretations as collective noise decreases. We now have a formal understanding as to why this effect holds: the noisier the collective interpretation, the less likely the listener $L_{0}$ is to correctly resolve the question under discussion, namely the properties of the named boxes $s$. Given that the speaker $S_{1}$'s goal is to successfully communicate $s$ to $L_{0}$, the noisier an interpretation, the less useful it is at achieving this goal; the speaker is therefore less likely to intend this interpretation, and as a result the pragmatic listener $L_{1}$ is less likely to infer it.
 
-The model also successfully predicts the qualitative increase in the probability of a collective interpretation as the speaker's knowledge access becomes limited. %With only partial access to the actual state $s$, $S_{1}$ is less likely to have precise information concerning $s$ about which to communicate. 
-$L_{1}$ tracks  $S_{1}$'s epistemic state, and therefore knows whether the speaker has full or partial knowledge. In the case of partial knowledge, a distributive interpretation lacks perceptual, epistemic support, and therefore becomes less likely; as a result, collective interpretations become more likely.
+The model also successfully predicts the qualitative increase in the probability of a collective interpretation as the speaker's  access to individual object properties becomes limited. %With only partial access to the actual state $s$, $S_{1}$ is less likely to have precise information concerning $s$ about which to communicate. 
+$L_{1}$ tracks  $S_{1}$'s epistemic state, and therefore knows whether the speaker has full or partial knowledge. In the case of partial knowledge, a distributive interpretation lacks epistemic support, and therefore becomes less likely; as a result, collective interpretations become more likely.
 
 %We have verified the qualitative predictions of our account of plural predication: increasing the contextual predictability of collective properties (by decreasing contextual noise) increases the probability of collective interpretations; and, regardless of the amount of contextual noise, removing support for a distributive interpretation (by limiting the speaker's access to individual properties) decreases the probability of a distributive interpretation and thus increases the probability of a collective interpretation. Crucially, both of these qualitative predictions are borne out while making minimal assumptions concerning model parameters. Next, we fit these parameters to the human data collected in Expt.~3 to test both qualitative and \emph{quantitative} predictions of the model.
 
-\ndg{what is the list of all parameters fit? $P(v)$, $C(u)$... anything else? do these results still use only two values of the degrees (3 and 4)? which $P(c)$ is used for these predictions? is it fit to the data?}
 
-To test the quantitative predictions of our model, we fit its parameters to best estimate the human data. Comparing the model predictions in Fig.~\ref{modelresults} to the rates of collective endorsement from Expt.~3 in Fig.~\ref{resultsexpt2}, the first thing to notice is the overall higher rates of collective endorsement in the human data. To capture this fact, we can change the prior probability of a collective interpretation, $p(v)$, in our model. In Fig.~\ref{modelresults}, that parameter is set to 0.5, or chance; to achieve a maximal fit between our model and the dependent measure from Expt.~3, we set that parameter to 0.88 for each of the three predicates. We also cheapen the cost of the ambiguous utterance relative to the unambiguous ones; in place of the flat prior distribution over possible utterances used above, here we set the utterance prior such that \texttt{ambiguous} is twice as cheap as \texttt{collective} or \texttt{distributive}---a reasonable assumption from the point of view of production, given that costlier, unambiguous utterances contain an extra word (i.e., \emph{each} or \emph{together}).
+%To test the quantitative predictions of our model, we fit its parameters to best estimate the human data. Comparing the model predictions in Fig.~\ref{modelresults} to the rates of collective endorsement from Expt.~3 in Fig.~\ref{resultsexpt2}, the first thing to notice is the overall higher rates of collective endorsement in the human data. To capture this fact, we can change the prior probability of a collective interpretation, $p(v)$, in our model. In Fig.~\ref{modelresults}, that parameter is set to 0.5, or chance; to achieve a maximal fit between our model and the dependent measure from Expt.~3, we set that parameter to 0.88 for each of the three predicates. We also cheapen the cost of the ambiguous utterance relative to the unambiguous ones; in place of the flat prior distribution over possible utterances used above, here we set the utterance prior such that \texttt{ambiguous} is twice as cheap as \texttt{collective} or \texttt{distributive}---a reasonable assumption from the point of view of production, given that costlier, unambiguous utterances contain an extra word (i.e., \emph{each} or \emph{together}).
+
+\ndg{something about fitting $P(c)$...}
 
 To quantitatively evaluate the role of speaker knowledge, we collapse over the contextual predictability manipulation and look only at judgments for plural predications with \emph{heavy} (the knowledge manipulation had no measurable affect on \emph{tall} or \emph{big}). %Here we fit only the specific values for noise in the model; all other parameters remain unchanged. 
 With \emph{heavy}-specific values for contextual noise---all other parameters remain unchanged---we generate the model predictions in Fig.~\ref{heavymodel}, plotted with average collective endorsement ratings for \emph{heavy} from Expt.~3. By simply assuming that the collective interpretations of \emph{heavy} have \emph{heavy}-specific values for noise in context, we achieve a near exact fit between the model and the human data it predicts.
